[package]
name = "replicate-rs"
version = "0.8.4"
edition = "2021"
authors = ["KCaverly"]
keywords = ["replicate", "machine-learning"]
license = "MIT"
description = "A minimal async http client for Replicate"
repository = "https://github.com/KCaverly/replicate-rs"
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0"
erased-serde = "0.3.31"
futures-lite = "2.0.1"
reqwest = {version = "0.11.22", features = ["stream"]}
eventsource-stream = "0.2.3"
bytes = "1.5.0"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
httpmock = "0.6.0"
tokio-test = "0.4.2"
